--- a/style.css
+++ b/style.css
@@ -1,5 +1,7 @@
 body {
-  margin: 15px 0 0 15px;
+  margin-top: 15px;
+  margin-left:15px;
+  margin-right:15px;
   background-color:  rgb(245,245,245);
   font-family:"Calibri", sans-serif;
   color:rgb(82,82,82); 
@@ -12,6 +14,7 @@ body {
   text-align: center;
   padding: 5px 15px 5px 15px;
   background-color:  rgb(232,232,232);
+  margin-top: 10px;
   
 }
 
